# crunchstore

./: CMakeLists.txt  ProjectHome.md  README.md  Usecrunchstore.cmake.in  crunchstoreConfig.cmake.in
extra/: crunchstore.fpc.in
src/Persistence/: CMakeLists.txt  DataAbstractionLayer.h  NullBuffer.cxx  NullBuffer.h  NullCache.cxx  SQLiteStore.cxx  SearchCriterion.h
src/crunchstore/: BindableAnyWrapper.cxx  BindableAnyWrapper.h  BufferBase.cxx  BufferBase.h  CMakeLists.txt  Cache.cxx  Cache.h  CompilerGuards.h  DataAbstractionLayer.cxx  DataAbstractionLayer.h  DataAbstractionLayerPtr.h  DataManager.cxx  DataManager.h  DataManagerPtr.h  Datum.cxx  Datum.h  DatumPtr.h  Exception.h  ExportConfig.h  Logging.h  MongoStore.cxx  MongoStore.h  Multiplexer.cxx  Multiplexer.h  NullBuffer.cxx  NullBuffer.h  NullCache.h  Persistable.cxx  Persistable.h  PointerTypes.h  SQLiteStore.cxx  SQLiteStore.h  SQLiteTransactionKey.cxx  SQLiteTransactionKey.h  SearchCriterion.h  Serialize.h  Store.cxx  Store.h
src/examples/: CMakeLists.txt  asMember.cxx  bulk.cxx  main.cxx
trunk/: CMakeLists.txt  crunchstoreBuildTreeSettings.cmake.in  crunchstoreConfig.cmake.in  crunchstoreConfigVersion.cmake.in
trunk/extra/: crunchstore.fpc.in
trunk/src/: CMakeLists.txt
trunk/src/Persistence/: BufferBase.h  CMakeLists.txt  Cache.h  SQLiteStore.h
trunk/src/crunchstore/: BindableAnyWrapper.cxx  BindableAnyWrapper.h  BufferBase.h  CMakeLists.txt  Cache.cxx  Cache.h  DataAbstractionLayer.cxx  DataAbstractionLayer.h  DataAbstractionLayerPtr.h  DataManager.cxx  DataManager.h  DataManagerPtr.h  Datum.h  DatumPtr.h  ExportConfig.h  MongoStore.cxx  MongoStore.h  Multiplexer.cxx  Multiplexer.h  NullBuffer.cxx  NullBuffer.h  NullCache.cxx  NullCache.h  Persistable.cxx  Persistable.h  PersistablePtr.h  SQLiteStore.cxx  SQLiteStore.h  SQLiteStorePtr.h  SQLiteTransactionKey.h  SearchCriterion.h  Serialize.cxx  Serialize.h  Store.cxx  Store.h  StorePtr.h  TransactionKey.h
trunk/src/examples/: CMakeLists.txt  data.json  main.cxx
